--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-    <script  src="utilities.js" ></script>
+    <!-- <script  src="utilities.js" ></script> -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 </head>
 <body>
@@ -196,6 +196,41 @@
 
     </section>
 
+    <script>
+
+date = (new Date("Mar 25 2015")).toDateString()
+
+window.onload = (e) => {
+    document.getElementById("created-date").innerHTML = date
+
+}
+
+function showMenu(){
+    navLinks = document.getElementById("navLinks")
+
+    navLinks.style.right = '0'
+}
+function hideMenu(){
+    navLinks = document.getElementById("navLinks")
+
+    navLinks.style.right = '-200px'
+}
+
+function showContent(ai, ac) {
+    articleIntro = document.getElementById(ai)
+    articleIntro.hidden = true
+
+    articleContent = document.getElementById(ac)
+    articleContent. hidden = false
+}
+
+function showComments(e, id) {
+    showCom = document.getElementById(id)
+    showCom.hidden = !(showCom.hidden)
+    e.text = e.text === "Hide Comments" ? "Show Comments" : "Hide Comments"
+
+}
+    </script>
     
 </body>
 </html>
